# reflex-vla

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  GOALS.yaml  LICENSE  README.md  pyproject.toml
.agents/ao/: pending.jsonl  tasks.jsonl
.agents/ao/index/: sessions.jsonl
.agents/ao/provenance/: graph.jsonl
.agents/council/: 2026-04-16-post-mortem-reflex-validate.md  2026-04-16-pre-mortem-reflex-validate.md  20260416T000000Z-vibe-recent.md
.agents/crank/: issue-1-result.md  issue-2-result.md  issue-3-result.md  issue-4-result.md  issue-5-result.md  issue-6-result.md  issue-7-result.md  issue-vlm-1-result.md  issue-vlm-2-result.md  issue-vlm-3-result.md  issue-vlm-5-result.md  issue-vlm-real-1-result.md  issue-vlm-real-2-result.md  issue-vlm-real-3-result.md  issue-vlm-real-4-result.md  issue-vlm-real-5-result.md  issue-vlm-real-6-result.md  spike-gqa-result.md  trajectory-test-result.md
.agents/evolve/: cycle-0-report.md  fitness-0-baseline.json
.agents/plans/: 2026-04-16-reflex-validate-roundtrip.md  2026-04-16-vlm-prefix-encoder.md  2026-04-16-vlm-real-forward.md
.agents/research/: 2026-04-16-reflex-validate-stub.md  2026-04-16-vlm-prefix-encoder.md
.agents/rpi/: phase-1-summary-2026-04-16-reflex-validate.md  phase-1-summary-2026-04-16-vlm-prefix.md  phase-2-summary-2026-04-16-reflex-validate.md  phase-2-summary-2026-04-16-vlm-prefix.md  phase-3-summary-2026-04-16-reflex-validate.md  phase-4-summary-2026-04-16-reflex-validate.md  phase-5-summary-2026-04-16-reflex-validate.md  phase-6-summary-2026-04-16-reflex-validate.md
.github/workflows/: docker-publish.yml  docker-smoke.yml
archive/: README.md
archive/scripts/: modal_libero10.py  sim_smoke_test.py
docs/: getting_started.md
launch/: ANNOUNCEMENT.md  README.md  lerobot_3146_draft.md  reddit_robotics_draft.md  show_hn_draft.md
reflex_context/: README.md  cuda_runtime_last_run.json  docker_smoke_last_run.json  external_refs.md  fresh_install_last_run.json  measured_numbers.md  mvp_queue.md  num_steps_quality_last_run.json  ros2_live_last_run.json  serve_roundtrip_last_run.json
reflex_context/01_architecture/: expert_stack_layer_structure.md  gr00t_ddpm_dit_vs_flow_matching.md  gr00t_eagle_vlm_export_plan.md  gr00t_n16_state_dict_analysis.md  onnx_export_decomposition.md  orin_nano_fp16_plan.md  pi0_monolithic_wrap_pattern.md  pi0_rmsnorm_already_decomposed.md  reflex_product_structure.md  smolvla_forward_pass.md  vlm_prefix_pipeline.md
reflex_context/02_bugs_fixed/: cross_cutting_patterns.md  libero_integration_bugs.md  modal_deployment_gotchas.md  pi0_expert_stack_divergences.md  pi0_num_steps_10_three_patch_stack.md  pi0_pi05_gr00t_bugs.md  smolvla_pipeline_bugs.md
reflex_context/03_research/: benchmark_landscape_all.md  checkpoint_formats.md  competitor_deployment_stacks.md  competitor_landscape.md  direct_torch_export_viability.md  eval_methodology_all.md  hardware_targets.md  inference_infra_options.md  non_sim_eval_techniques.md  papers_referenced.md  pi0_empirical_derisk_findings.md  pi0_empirical_derisk_plan.md  pi0_onnx_importable_sources.md  published_benchmark_numbers.md  vla_eval_integration.md
reflex_context/04_iteration_lessons/: diagnostic_ladder.md  knowledge_capture_pattern.md  local_vs_modal.md  modal_cost_log.md  shared_noise_discipline.md
reflex_context/05_sessions/: 2026-04-10_mega_session.md  2026-04-13_phase_iii_batching_adaptive.md  2026-04-14_benchmark_postmortem.md  2026-04-16_libero_infra_hunt.md  2026-04-17_libero_correctness_hunt.md  2026-04-19_afternoon_libero_gr00t.md  2026-04-19_all_four_vlas.md  2026-04-19_evening_gr00t_vlm_libero_onnx_polish.md  README.md
reflex_context/06_experiments/: adaptive_denoising_validation.md  batching_validation.md  customer_first_run_transcript.md  latency_benchmarks.md  launch_verification_gates.md  monolithic_parity_table.md  pytorch_vs_onnx_cos_sim_timeline.md  stage_diff_snapshot.md  task34_gap_audit.md  task_success_results.md
reflex_context/_raw/: current_session.md  git_history.md  modal_apps_and_pm_docs.md  modal_scripts.md  prior_sessions.md  sessions_md.md
scripts/: export_pi0_monolithic.py  local_expert_diff.py  local_full_diff.py  local_full_diff_pi0.py  local_pi0_gemma_parity.py  local_pi0_inspect_norms.py  local_pi0_monolithic_parity.py  local_pi0_prefix_smoke.py  local_pi0_rmsnorm_swap_diff.py  local_pi0_siglip_parity.py  local_single_layer_diff.py  local_stage_diff.py  local_tiny_gemma_sanity.py  modal_bench_onnx_vs_torch.py  modal_bench_path_b.py  modal_bench_trt_fp16.py  modal_cli_export.py  modal_customer_dogfood.py  modal_docker_smoke_test.py  modal_e2e_all_models.py  modal_e2e_demo.py  modal_e2e_pipeline.py  modal_expert_export.py  modal_fp16_convert.py  modal_fp16_parity.py  modal_fresh_install_test.py  modal_full_export.py  modal_full_pipeline.py  modal_gr00t_e2e_chain_test.py  modal_gr00t_eagle_vlm_export.py  modal_gr00t_keys_dump.py  modal_gr00t_lerobot_probe.py  modal_gr00t_monolithic_export.py  modal_gr00t_state_encoder_sanity.py  modal_gr00t_vlm_parity.py  modal_libero10.py  modal_libero_lerobot_native.py  modal_libero_monolithic.py  modal_libero_monolithic_onnx.py  modal_pi05_monolithic_export.py  (+27 more)
src/reflex/: __init__.py  _onnx_backend.py  _pytorch_backend.py  checkpoint.py  ci_template.py  cli.py  decompose.py  validate_roundtrip.py  validate_training.py  verification_report.py
tests/: test_action_buffer.py  test_adapt.py  test_api_key_auth.py  test_calibration.py  test_check.py  test_checkpoint_detection.py  test_cli.py  test_cli_export_end_to_end.py  test_cuda_runtime_parity.py  test_docker_image_smoke.py  test_fresh_install.py  test_guard.py  test_guard_trip_integration.py  test_latency_and_determinism.py  test_num_steps_quality.py  test_openvla_postprocess.py  test_orin_nano_fp16_fit.py  test_ros2_bridge.py  test_ros2_bridge_live.py  test_runtime_num_steps_10.py  test_serve_act_roundtrip.py  test_serve_http_roundtrip.py  test_server.py  test_split.py  test_turbo.py  test_validate_roundtrip.py  test_verification_report.py  test_vla_eval_adapter.py  test_vlm_prefix.py
(+70 files in other folders)
